# dap-unrealscript-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
extensions/vscode/: .gitignore  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: extension.ts
src/adapter/: CMakeLists.txt  adapter.cpp  adapter.h  client.cpp  client.h  commands.cpp  debugger.cpp  debugger.h  events.cpp  signals.h
src/common/: commands.h  events.h  message.h
src/interface/: CMakeLists.txt  commands.cpp  debuggerinterface.cpp  events.cpp  service.cpp  service.h
src/protos/: commands.proto  events.proto
visual_studio/UnrealScriptDebuggerAdapter/: UnrealScriptDebuggerAdapter.csproj  UnrealScriptDebuggerAdapter.pkgdef  UnrealScriptDebuggerAdapter.sln  UnrealScriptDebuggerAdapterPackage.cs  source.extension.vsixmanifest
visual_studio/UnrealScriptDebuggerAdapter/Properties/: AssemblyInfo.cs
